[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/menu/icons/player_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/resources/menu/online/lobbytile_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Orbitron/static/Orbitron-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/menu/LobbyTile.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.286275, 0.588235, 1 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.223529, 0.223529, 0.223529, 1 )
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="DynamicFont" id=3]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.407843, 0.498039, 0.501961, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=11]

[node name="LobbyTile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -670.0
rect_min_size = Vector2( 500, 50 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Background" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Highlight" type="Panel" parent="Background"]
margin_right = 20.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 0 )
custom_styles/panel = SubResource( 9 )

[node name="JoinButton" type="Button" parent="Background/Highlight"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_right = 30.0
margin_bottom = 20.0
rect_rotation = -90.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "JOIN"

[node name="Primary" type="Panel" parent="Background"]
margin_left = 20.0
margin_right = 500.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 10 )

[node name="InfoPane" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 0

[node name="Infobox" type="VBoxContainer" parent="InfoPane"]
margin_right = 226.0
margin_bottom = 42.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 0

[node name="NameLabel" type="Label" parent="InfoPane/Infobox"]
margin_right = 226.0
margin_bottom = 24.0
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Lobby Name"

[node name="LobbyStatus" type="HBoxContainer" parent="InfoPane/Infobox"]
margin_top = 24.0
margin_right = 226.0
margin_bottom = 42.0

[node name="StateLabel" type="Label" parent="InfoPane/Infobox/LobbyStatus"]
margin_right = 70.0
margin_bottom = 18.0
rect_min_size = Vector2( 70, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Open"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="InfoPane/Infobox/LobbyStatus"]
margin_left = 74.0
margin_right = 74.0
margin_bottom = 18.0
custom_styles/separator = SubResource( 1 )

[node name="TypeLabel" type="Label" parent="InfoPane/Infobox/LobbyStatus"]
margin_left = 78.0
margin_right = 148.0
margin_bottom = 18.0
rect_min_size = Vector2( 70, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Public"
align = 1
valign = 1

[node name="VSeparator3" type="VSeparator" parent="InfoPane/Infobox/LobbyStatus"]
margin_left = 152.0
margin_right = 152.0
margin_bottom = 18.0
custom_styles/separator = SubResource( 1 )

[node name="ConnectionLabel" type="Label" parent="InfoPane/Infobox/LobbyStatus"]
margin_left = 156.0
margin_right = 226.0
margin_bottom = 18.0
rect_min_size = Vector2( 70, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Steam"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="InfoPane"]
margin_left = 226.0
margin_right = 346.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="ParticipantsInfo" type="HBoxContainer" parent="InfoPane"]
margin_left = 346.0
margin_right = 471.0
margin_bottom = 42.0
grow_horizontal = 0
size_flags_vertical = 3

[node name="HostNameLabel" type="Label" parent="InfoPane/ParticipantsInfo"]
margin_top = 12.0
margin_right = 77.0
margin_bottom = 30.0
grow_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 5 )
text = "Host: temp"

[node name="VSeparator" type="VSeparator" parent="InfoPane/ParticipantsInfo"]
margin_left = 81.0
margin_right = 81.0
margin_bottom = 42.0
custom_styles/separator = SubResource( 6 )

[node name="Panel" type="Panel" parent="InfoPane/ParticipantsInfo"]
margin_left = 85.0
margin_right = 125.0
margin_bottom = 42.0
rect_min_size = Vector2( 40, 0 )
size_flags_vertical = 5
custom_styles/panel = SubResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPane/ParticipantsInfo/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 8.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="InfoPane/ParticipantsInfo/Panel/HBoxContainer"]
margin_left = 2.0
margin_right = 22.0
margin_bottom = 18.0
rect_min_size = Vector2( 20, 0 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="NumMembersLabel" type="Label" parent="InfoPane/ParticipantsInfo/Panel/HBoxContainer"]
margin_left = 26.0
margin_right = 37.0
margin_bottom = 18.0
custom_styles/normal = SubResource( 11 )
text = "0"
